# OrderBook

./: CMakeLists.txt  Makefile  README.md
benchmarks/: benchmark.cpp  readme.md
data/: benchmark_events.csv  readme.md  sample_commands.txt  sample_events.csv
docs/: benchmark_report.md  design.md  matching_rules.md  readme.md
include/: analytics.h  exchange.h  matching_engine.h  order.h  order_book.h  readme.md  reporting.h  simulator.h  strategy.h  utils.h
logs/: benchmark_summary.json  metrics.csv  readme.md  rejections.csv  snapshots.csv  states.csv  strategy_summary.json  trades.csv
src/: analytics.cpp  exchange.cpp  main.cpp  matching_engine.cpp  order.cpp  order_book.cpp  readme.md  reporting.cpp  simulator.cpp  strategy.cpp  strategy_main.cpp  utils.cpp
tests/: readme.md  test_analytics.cpp  test_basic.cpp  test_cancel.cpp  test_matching.cpp  test_partial_fill.cpp  test_simulator.cpp  test_strategy.cpp
ui/: README.md  app.js  index.html  styles.css
